--- a/css-box-model/box-styles.css
+++ b/css-box-model/box-styles.css
@@ -6,3 +6,19 @@ em, strong {
     background-color: #b2d6ff; /*Light Blue */
     display: inline;
 }
+
+h1 {
+    padding: 50px;
+    border-bottom: 1px solid #5d6063;
+}
+
+p {
+    padding: 20px 0 10px 20px;
+
+    margin-top: 25px;
+    margin-bottom: 50px;
+}
+
+strong {
+    margin: 50px;
+}
