--- a/css-selectors/styles.css
+++ b/css-selectors/styles.css
@@ -3,7 +3,11 @@
     font-style: italic;
 }
 
-.button {
+.button:link,
+.button:visited {
+    display: block;
+    text-decoration: none;
+
     color: #FFF;
     background-color: #5995da; /* Blue */
     font-weight: bold;
@@ -16,17 +20,68 @@
     margin: 20px auto;
 }
 
+.button:hover,
+.button:visited:hover {
+    color: #fff;
+    background-color: #76aeed;
+}
+
 .page {
     width: 600px;
     margin: 0 auto;
 }
 
-.call-to-action {
-    font-style: italic;
-    background-color: #eeb75a;
+.call-to-action:link,
+.call-to-action:visited {
+  font-style: italic;
+  background-color: #EEB75A;     /* Yellow */
+}
+
+.call-to-action:hover,
+.call-to-action:visited:hover {
+  background-color: #F5CF8E;     /* Light yellow */
+}
+
+.call-to-action:active,
+.call-to-action:visited:active {
+  background-color: #EEB75A;     /* Yellow */
 }
 
 .synopsis em {
     font-style: normal;
 }
 
+a:link {
+    color: blue;
+    text-decoration: none;
+}
+
+a:visited {
+    color: purple;
+}
+
+a:hover {
+    color: aqua;
+    text-decoration: underline;
+}
+
+a:active {
+    color: red;
+}
+
+a:visited:hover {
+    color: orange;
+}
+
+a:visited:active {
+    color: red;
+}
+
+p:last-of-type {
+    margin-bottom: 50px;
+}
+
+.page > p:first-of-type {
+    color: #7e8184;
+    font-style: italic;
+}
