--- a/floats/styles.css
+++ b/floats/styles.css
@@ -3,3 +3,38 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.page {
+    width: 900px;
+    margin: 0 auto;
+}
+
+.container {
+    background-color: #EAEDF0;
+    overflow: hidden;
+}
+
+.menu {
+    height: 100px;
+    background-color: #b2d6ff;
+}
+
+.sidebar {
+    float: left;
+    width: 200px;
+    height: 300px;
+    background-color: #f09a9d;
+}
+
+.content {
+    float: left;
+    width: 650px;
+    height: 500px;
+    background-color: #f5cf8e;
+}
+
+.footer {
+    clear: both;
+    height: 200px;
+    background-color: #D6E9FE;
+}
