--- a/floats/styles.css
+++ b/floats/styles.css
@@ -34,7 +34,14 @@
 }
 
 .footer {
-    clear: both;
-    height: 200px;
     background-color: #D6E9FE;
+    overflow: hidden;
+}
+
+.footer-item {
+    float: left;
+    width: 31%;
+    margin: 20px 1.15%;
+    height: 160px;
+    background-color: #B2D6FF;
 }
