--- a/floats/styles.css
+++ b/floats/styles.css
@@ -31,6 +31,7 @@
     width: 650px;
     height: 500px;
     background-color: #f5cf8e;
+    padding: 20px;
 }
 
 .footer {
@@ -44,4 +45,33 @@
     margin: 20px 1.15%;
     height: 160px;
     background-color: #B2D6FF;
+}
+
+.article-image {
+    float: left;
+    width: 300px;
+    height: 200px;
+    margin: 0 20px 20px 0;
+}
+
+p {
+    margin-bottom: 20px;
+}
+
+.avatar {
+    float: left;
+    width: 60px;
+    height: 60px;
+    margin: 25px;
+    border-radius: 40px;
+    background-color: #D6E9FE;
+}
+
+.username {
+    margin-top: 30px;
+}
+
+.comment {
+    margin: 10px;
+    overflow: hidden;
 }
