--- a/flexbox/styles.css
+++ b/flexbox/styles.css
@@ -5,12 +5,26 @@
 }
 
 .menu-container {
+    display: flex;
     color: #FFF;
     background-color: #5995da;
     padding: 20px 0;
+
+    justify-content: center;
 }
 
 .menu {
-    border: 1px solid #fff;
     width: 900px;
+
+    display: flex;
+    justify-content: space-between;
+}
+
+.links {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.login {
+    margin-left: 20px;
 }
