--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -56,8 +56,11 @@
 
 /* Tablet Styles */
 @media only screen and (min-width: 401px) and (max-width: 960px) {
-    body {
-        background-color: #f5cf8e;
+    .sign-up,
+    .feature-1,
+    .feature-2,
+    .feature-3 {
+        width: 50%;
     }
 }
 
