--- a/responsive-design/styles.css
+++ b/responsive-design/styles.css
@@ -66,7 +66,26 @@
 
 /* Desktop Styles */
 @media only screen and (min-width: 961px) {
-    body {
-        background-color: #b2d6ff;
+    .page {
+        width: 960px;
+        margin: 0 auto;
+    }
+
+    .feature-1,
+    .feature-2,
+    .feature-3 {
+        width: 33.33%;
+    }
+
+    .header {
+        height: 400px;
+    }
+
+    .sign-up {
+        order: 1;
+    }
+
+    .content {
+        order: 2;
     }
 }
