--- a/forms/styles.css
+++ b/forms/styles.css
@@ -50,7 +50,8 @@ body {
     flex-wrap: wrap;
 }
 
-.form-row input[type='text'] {
+.form-row input[type='text'],
+.form-row input[type='email'] {
     background-color: #ffffff;
     border: 1px solid #d6d9dc;
     border-radius: 3px;
@@ -75,7 +76,10 @@ body {
         margin-bottom: 20px;
     }
 
-    .form-row input[type='text'] {
+    .form-row input[type='text'],
+    .form-row input[type='email'],
+    .form-row select,
+    .form-row textarea {
         width: 250px;
         height: initial;
     }
@@ -86,4 +90,11 @@ body {
         margin-top: 7px;
         padding-right: 20px;
     }
+}
+
+.form-row input[type='text']:invalid,
+.form-row input[type='email']:invalid {
+    border: 1px solid #d55c5f;
+    color: #d55c5f;
+    box-shadow: none;
 }
