--- a/forms/styles.css
+++ b/forms/styles.css
@@ -136,3 +136,9 @@ body {
 .legacy-form-row input[type='radio'] {
     float: left;
 }
+
+.form-row select {
+    width: 100%;
+    padding: 5px;
+    font-size: 14px;
+}
