--- a/forms/styles.css
+++ b/forms/styles.css
@@ -64,6 +64,62 @@ body {
     margin-bottom: 15px;
 }
 
+.form-row textarea {
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: 14px;
+
+    border: 1px solid #d6d9dc;
+    border-radius: 3px;
+
+    min-height: 200px;
+    margin-bottom: 10px;
+    padding: 7px;
+    resize: none;
+}
+
+.form-row .instructions {
+    color: #999999;
+    font-size: 14px;
+    margin-bottom: 30px;
+}
+
+.form-row input[type='text']:invalid,
+.form-row input[type='email']:invalid {
+    border: 1px solid #d55c5f;
+    color: #d55c5f;
+    box-shadow: none;
+}
+
+.legacy-form-row {
+    border: none;
+    margin-bottom: 40px;
+}
+
+.legacy-form-row legend {
+    margin-bottom: 15px;
+}
+
+.legacy-form-row .radio-label {
+    display: block;
+    font-size: 14px;
+    padding: 0 20px 0 10px;
+}
+
+.legacy-form-row input[type='radio'] {
+    margin-top: 2px;
+}
+
+.legacy-form-row .radio-label,
+.legacy-form-row input[type='radio'] {
+    float: left;
+}
+
+.form-row select {
+    width: 100%;
+    padding: 5px;
+    font-size: 14px;
+}
+
 @media only screen and (min-width: 700px) {
     .speaker-form-header,
     .speaker-form {
@@ -104,41 +160,9 @@ body {
     .legacy-form-row legend{
         float: left;
     }
+
+    .form-row .instructions {
+        margin-left: 120px;
+    }
 }
 
-.form-row input[type='text']:invalid,
-.form-row input[type='email']:invalid {
-    border: 1px solid #d55c5f;
-    color: #d55c5f;
-    box-shadow: none;
-}
-
-.legacy-form-row {
-    border: none;
-    margin-bottom: 40px;
-}
-
-.legacy-form-row legend {
-    margin-bottom: 15px;
-}
-
-.legacy-form-row .radio-label {
-    display: block;
-    font-size: 14px;
-    padding: 0 20px 0 10px;
-}
-
-.legacy-form-row input[type='radio'] {
-    margin-top: 2px;
-}
-
-.legacy-form-row .radio-label,
-.legacy-form-row input[type='radio'] {
-    float: left;
-}
-
-.form-row select {
-    width: 100%;
-    padding: 5px;
-    font-size: 14px;
-}
