--- a/forms/styles.css
+++ b/forms/styles.css
@@ -169,8 +169,34 @@ body {
         margin-left: 120px;
         width: auto;
     }
+
+    .form-row button {
+        margin-left: 120px;
+    }
 }
 
 .form-row .checkbox-label {
     margin-bottom: 0;
+}
+
+.form-row button {
+    font-size: 16px;
+    font-weight: bold;
+
+    color: #ffffff;
+    background-color: #5995da;
+
+    border: none;
+    border-radius: 3px;
+
+    padding: 10px 40px;
+    cursor: pointer;
+}
+
+.form-row button:hover {
+    background-color: #76aeed;
+}
+
+.form-row button:active {
+    background-color: #407fc7;
 }
